--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <div class="right-container">
             <nav>
               <ul>
-                <li><a class="active underline-hover" href="http://">Home</a></li>
-                <li><a class="underline-hover" href="http://">About</a></li>
-                <li><a class="underline-hover" href="http://">Contact</a></li>
-                <li><a class="underline-hover" href="http://">Gallery</a></li>
+                <li><a class="active underline-hover" href="#">Home</a></li>
+                <li><a class="underline-hover" href="#">About</a></li>
+                <li><a class="underline-hover" href="#">Contact</a></li>
+                <li><a class="underline-hover" href="#">Gallery</a></li>
               </ul>
             </nav>
             <div class="login-icon cursor-pointer">
